--- a/new-profile.html
+++ b/new-profile.html
@@ -1,1 +1,29 @@
+﻿<!DOCTYPE html>
 
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css">
+    <title></title>
+</head>
+<body>
+    <div class="middle-container">
+        <div class="login-box">
+            <input type="text" placeholder="Username" />
+            <br /><br />
+            <input type="password" placeholder="Password" />
+            <br /><br />
+            <input type="password" placeholder="Confirm Password" />
+            <br /><br />
+            <button type="button" onclick="newProfile()">Create New Profile</button>
+        </div>
+    </div>
+</body>
+</html>
+
+<script>
+    function newProfile()
+    {
+        window.location.href = "login.html";
+    }
+</script>
