--- a/login.html
+++ b/login.html
@@ -15,6 +15,8 @@
             <br /><br />
             <button type="button" onclick="login()">Login</button>
         </div>
+
+        <p>Need an account? <a href="new-profile.html">Create one!</a></p>
     </div>
 </body>
 </html>
