--- a/html_files/login.html
+++ b/html_files/login.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title></title>
 </head>
 <body>
@@ -14,9 +14,9 @@
             <input type="password" placeholder="Password" />
             <br /><br />
             <button type="button" onclick="login()">Login</button>
+            <p>Need an account? <a href="new-profile.html">Create one!</a></p>
         </div>
 
-        <p>Need an account? <a href="new-profile.html">Create one!</a></p>
     </div>
 </body>
 </html>
