--- a/html_files/feed.html
+++ b/html_files/feed.html
@@ -10,7 +10,7 @@
 	</div>
 
 	<div class="middle-container">
-		<p>Boogy</p>
+		<p class="feed-box">Boogy</p>
 	</div>
 
 	<div class="right-container">
